--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
     "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
     "superagent": "^2.1.0"
   },
   "devDependencies": {
