--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "babel-preset-es2015": "^6.13.2",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "mongoose": "^4.5.8",
+    "node-uuid": "^1.4.7",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
