--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.13.2",
     "body-parser": "^1.15.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-alpha.5",
+    "bootstrap-loader": "^2.0.0-beta.22",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^0.23.1",
     "express": "^4.14.0",
     "mongoose": "^4.5.8",
+    "node-sass": "^4.5.0",
     "node-uuid": "^1.4.7",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
@@ -31,9 +34,14 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "superagent": "^2.1.0"
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.13.2",
+    "superagent": "^2.1.0",
+    "url-loader": "^0.5.8"
   },
   "devDependencies": {
+    "babel-core": "^6.23.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
@@ -42,14 +50,14 @@
     "css-loader": "^0.23.1",
     "eslint": "^3.2.2",
     "eslint-plugin-react": "^6.0.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
     "istanbul": "^1.0.0-alpha.2",
     "jasmine": "^2.4.1",
     "style-loader": "^0.13.1",
     "supertest": "^2.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
+    "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
   }
